how-to-setup/OracleCloud/kubectl/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 8080        # The port inside the cluster
      targetPort: 8080   # The port on the container
      nodePort: 30007    # The external port to access
  type: NodePort
